--- a/build.gradle
+++ b/build.gradle
@@ -72,6 +72,8 @@ eclipse {
 dependencies {
 	compileOnly('org.projectlombok:lombok')
 
+    compile('org.passay:passay:1.3.0')
+
 	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile('org.springframework.boot:spring-boot-starter-security')
